--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,9 @@ repo_url: https://github.com/PGxAfrica/PGxAfrica.github.io
 
 
 nav:
-    - Introduction: /
+  - 'index.md'
+  - 'about.md'
+  - 'people.md'
 
 
 theme:
