--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,9 +5,9 @@ repo_url: https://github.com/PGxAfrica/PGxAfrica.github.io
 
 
 nav:
-  - 'index.md'
-  - 'about.md'
-  - 'people.md'
+  - index.md
+  - about.md
+  - people.md
 
 
 theme:
