--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,9 +5,9 @@ repo_url: https://github.com/PGxAfrica/PGxAfrica.github.io
 
 
 nav:
-  - Home: index.md
-  - About: about.md
-  - People: people.md
+  - Home: 'index.md'
+  - About: 'about.md'
+  - People: 'people.md'
 
 
 theme:
